--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -31,14 +31,14 @@ const rightmenu: Menu[] = [
     href: "/archive",
   },
   {
-    label: "Github",
-    href: "https://github.com/web3templates/stablo-astro",
+    label: "iOS",
+    href: "https://apps.apple.com/us/app/abis-recipes/id6445965871?platform=ipad",
     external: true,
     badge: "new",
   },
   {
-    label: "Download",
-    href: "https://web3templates.com/templates/stablo-minimal-blog-website-template",
+    label: "Android",
+    href: "https://play.google.com/store/apps/details?id=com.mullr.abis_recipes&hl=en&gl=US",
     external: true,
   },
 ];
@@ -63,7 +63,7 @@ const mobilemenu: Menu[] = [...leftmenu, ...rightmenu];
       </div>
 
       <div class="flex items-center justify-between w-full md:w-auto">
-        <a class="w-28 dark:hidden" href="/">
+        <a class="w-96 dark:hidden" href="/">
           <Image src={logoImage} alt="Logo" />
         </a>
 
