--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -16,27 +16,22 @@ import Pagetitle from "@components/pagetitle.astro";
     <div class="grid md:grid-cols-2 gap-10 mx-auto max-w-4xl mt-16">
       <div>
         <h2 class="font-medium text-2xl text-gray-800 dark:text-gray-200">
-          Contact Stablo
+          Contact Mental Bake Down
         </h2>
         <p
           class="text-lg leading-relaxed text-gray-500 dark:text-gray-400 mt-3">
-          Have something to say? We are here to help. Fill up the form or send
-          email or call phone.
+          Have something to say? We are here to help. Fill up the form or send an
+          email.
         </p>
         <div class="mt-5">
           <div
             class="flex items-center mt-2 space-x-2 text-gray-600 dark:text-gray-300">
             <Icon class="text-gray-400 w-4 h-4" name="uil:map-marker" />
-            <span>1734 Sanfransico, CA 93063</span>
+            <span>Arlington, VA</span>
           </div><div
             class="flex items-center mt-2 space-x-2 text-gray-600 dark:text-gray-300">
             <Icon class="text-gray-400 w-4 h-4" name="uil:envelope" /><a
-              href="mailto:hello@stablotemplate.com">hello@stablotemplate.com</a
-            >
-          </div><div
-            class="flex items-center mt-2 space-x-2 text-gray-600 dark:text-gray-300">
-            <Icon class="text-gray-400 w-4 h-4" name="uil:phone" /><a
-              href="tel:+1 (987) 4587 899">+1 (987) 4587 899</a
+              href="mailto:abigail.naidoo.03@gmail.com">abigail.naidoo.03@gmail.com</a
             >
           </div>
         </div>
