--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,13 +1,12 @@
 ---
 import { Image, Picture } from "@astrojs/image/components";
-import Authorcard from "@components/authorcard.astro";
 import Container from "@components/container.astro";
 import Label from "@components/ui/label.astro";
-import { authors } from "@data/authors";
 import { categories } from "@data/category";
 import Layout from "@layouts/Layout.astro";
 import { getFormattedDate } from "@utils/all";
 import { CollectionEntry, getCollection } from "astro:content";
+import pic from "../../assets/authors/abi.jpg";
 
 import type { Author } from "@data/authors";
 import type { Category } from "@data/category";
@@ -27,7 +26,6 @@ const { post } = Astro.props;
 
 const { Content, remarkPluginFrontmatter } = await post.render();
 
-const author = authors.find((item) => item.slug === post.data.author) as Author;
 const category = categories.find(
   (item) => item.slug === post.data.category
 ) as Category;
@@ -51,23 +49,20 @@ const category = categories.find(
       <div class="flex justify-center mt-3 space-x-3 text-gray-500">
         <div class="flex items-center gap-3">
           <div class="relative flex-shrink-0 w-10 h-10">
-            {
-              author.image && (
+           
                 <Image
-                  src={author.image}
+                  src={pic}
                   alt="Author Photo"
                   width={80}
                   height={80}
                   loading="eager"
                   class="rounded-full"
                 />
-              )
-            }
           </div>
 
           <div>
             <p class="text-gray-800 dark:text-gray-400">
-              {author.name}
+              Abi
             </p>
             <div class="flex items-center space-x-2 text-sm">
               <time
@@ -96,7 +91,7 @@ const category = categories.find(
           sizes="(max-width: 640px) 90vw, 480px"
           aspectRatio="16:9"
           width={1024}
-          heignt={576}
+          height={576}
           alt="Thumbnail"
           loading="eager"
           class="w-full"
@@ -127,7 +122,6 @@ const category = categories.find(
           ← View all posts
         </a>
       </div>
-      {author && <Authorcard author={author} />}
     </article>
   </Container>
 </Layout>
